# Jacobs_University_Bremen

./: .gitignore  README.md
Introduction to CS/Notes/: ics-2021-09-14.txt  ics-2021-09-17.txt  (+11 more)
Programming in C&C++/: New Text Document.txt  tempCodeRunnerFile.cpp
Research/: RNN.txt  Test_1.ipynb  Test_RNN.py  tt.txt
Semester_3/Operating_System/Examples/bridge/: CMakeLists.txt
Semester_3/Operating_System/Examples/daytimed/: CMakeLists.txt  daytimed-udp.c  tcp.c  udp.c  udp.h
Semester_3/Operating_System/Examples/echo/: CMakeLists.txt  echo-fork.c  echo-pthread.c  echo.c
Semester_3/Operating_System/Examples/hello/: CMakeLists.txt  hello-cpp.cc  hello-dll.c  hello-glib-event.c  hello-glib-threads.c  hello-glib.c  hello-rv64-syscall.s  hello-writev.c  hello-x64-syscall.s  hello.hs
semester_3/operating_system/examples/bounded/: BoundedBufferTest.java  CMakeLists.txt  bounded.go
semester_3/operating_system/examples/msh/: CMakeLists.txt
semester_3/operating_system/examples/pets/: CMakeLists.txt
semester_3/operating_system/examples/pipes/: CMakeLists.txt  mail.c  pager.c  pipe.c  pipex.c
semester_3/operating_system/examples/semophore/: CMakeLists.txt  sem.h
semester_3/operating_system/examples/sigcat/: CMakeLists.txt  sigcat.c
semester_3/operating_system/examples/snake/: CMakeLists.txt  dlist.h  snake.c
semester_3/operating_system/examples/sockets/chatd/: CMakeLists.txt
semester_3/operating_system/practice_material/: CMakeLists.txt  EXAM.docx  Past papers- OS and DBWS.docx  deadlock.c  h2o (1).c  h2o.c  makeup exam.docx  os-2021-12-02.txt  os-2022-09-27.txt  os-2022-10-04.txt  race_cond.py  scat.c  twoWayCommPipe.c
semester_3/operating_system/src/c/: CMakeLists.txt  README
semester_3/operating_system/src/c/airplanes/: CMakeLists.txt
semester_3/operating_system/src/c/bounded/: CMakeLists.txt  bounded.c
semester_3/operating_system/src/c/bridge/: CMakeLists.txt
semester_3/operating_system/src/c/cat/: CMakeLists.txt
semester_3/operating_system/src/c/cat++/: CMakeLists.txt  lower.c  rot13.c
semester_3/operating_system/src/c/cookie-break/: CMakeLists.txt
semester_3/operating_system/src/c/datehack/: CMakeLists.txt
semester_3/operating_system/src/c/daytime/: CMakeLists.txt  daytime-tcp.c
semester_3/operating_system/src/c/daytime1-python/: daytime.py  daytimed.py
semester_3/operating_system/src/c/daytime2-python/: daytime.py  daytimed.py
semester_3/operating_system/src/c/daytimed/: daytimed-libevent.c
semester_3/operating_system/src/c/disco/: CMakeLists.txt  disco.c
semester_3/operating_system/src/c/echo/: CMakeLists.txt
semester_3/operating_system/src/c/expect/: CMakeLists.txt  test.expect.txt
semester_3/operating_system/src/c/finger/: CMakeLists.txt  finger.c
semester_3/operating_system/src/c/gsh/: CMakeLists.txt  gsh.c
semester_3/operating_system/src/c/happy/: CMakeLists.txt
semester_3/operating_system/src/c/hello/: CMakeLists.txt  hello-naive.c  hello-rv64-libc.s.txt  hello-signal.c  hello-sleep.c  hello-snowman.c  hello-x64-libc.s  hello-🌐.c  hello.rs  hello.st
semester_3/operating_system/src/c/hello/docker/: Dockerfile  Makefile  hello.c
semester_3/operating_system/src/c/hello/fr/LC_MESSAGES/: hello.mo
semester_3/operating_system/src/c/hello/po/: hello.pot
semester_3/operating_system/src/c/kernel/echo-cdev/: echo.c
semester_3/operating_system/src/c/kernel/hello/: Makefile.txt
semester_3/operating_system/src/c/kernel/timer/: Makefile.txt
semester_3/operating_system/src/c/lm/: lmd.c
semester_3/operating_system/src/c/locking/: CMakeLists.txt  locks.h
semester_3/operating_system/src/c/ls/: CMakeLists.txt  ls.c  ls.h  show.c
semester_3/operating_system/src/c/mcp/: CMakeLists.txt
semester_3/operating_system/src/c/memmap/: CMakeLists.txt  mapit.c  memmap.h  pmap.c
semester_3/operating_system/src/c/memory/: CMakeLists.txt  memory.c
semester_3/operating_system/src/c/memstress/: CMakeLists.txt
semester_3/operating_system/src/c/msh/: CMakeLists.txt  msh-redirect.c  msh-util.c  msh.c  msh.h
semester_3/operating_system/src/c/msh2/: CMakeLists.txt  job.c  slist.h
semester_3/operating_system/src/c/nanomsg/: CMakeLists.txt  pipeline.c  pubsub.c
semester_3/operating_system/src/c/parallel/: CMakeLists.txt  parallel-simple.c
semester_3/operating_system/src/c/pee/: CMakeLists.txt  pee.c
semester_3/operating_system/src/c/pets/: CMakeLists.txt  pets.c
semester_3/operating_system/src/c/pipe/: CMakeLists.txt
semester_3/operating_system/src/c/popen/: CMakeLists.txt  email.c  popen.c
semester_3/operating_system/src/c/pthread/: CMakeLists.txt  pthread-barrier.c  pthread-cond.c  pthread-fib.c  pthread-multiplex.c  pthread-mutex.c  pthread-rwlock.c  pthread-sem.c  pthread.c
semester_3/operating_system/src/c/race/: CMakeLists.txt
semester_3/operating_system/src/c/rad/: CMakeLists.txt  rad.c  rad.h  request.h  tcp.c
semester_3/operating_system/src/c/semaphore/: CMakeLists.txt
semester_3/operating_system/src/c/semutil/: CMakeLists.txt  semutil.c
semester_3/operating_system/src/c/sigcat/: CMakeLists.txt
semester_3/operating_system/src/c/signals/: CMakeLists.txt  alarm.c
semester_3/operating_system/src/c/sleep/: CMakeLists.txt  sleep.c
semester_3/operating_system/src/c/smokers/: CMakeLists.txt
semester_3/operating_system/src/c/snake/: CMakeLists.txt  dlist.c  main.c  snake.h
semester_3/operating_system/src/c/sockets/: CMakeLists.txt
semester_3/operating_system/src/c/sockets/chat/: chat.c
semester_3/operating_system/src/c/sockets/chatd/: chatd.c  clnt.c
semester_3/operating_system/src/c/sockets/examples/: CMakeLists.txt  echod.c  httpget.c
semester_3/operating_system/src/c/sockets/lib/: CMakeLists.txt  tcp-close.c  tcp-connect.c  tcp.h  udp-chat.c  udp-read-send.c  udp-recv-write.c
semester_3/operating_system/src/c/syncbox/: CMakeLists.txt
semester_3/operating_system/src/c/timeslice/: CMakeLists.txt
semester_3/operating_system/src/c/unisex/: CMakeLists.txt
semester_3/operating_system/src/c/wc/: CMakeLists.txt
semester_3/operating_system/src/c/worker/: CMakeLists.txt  worker.c
(+1339 files in other folders)
