#
# CMakeLists.txt --
#

cmake_minimum_required(VERSION 3.12)

project(OS)
if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
  set(LINUX TRUE)
endif()

if(NOT ${APPLE})
  add_subdirectory(airplanes)
endif()
add_subdirectory(bounded)
add_subdirectory(bridge)
add_subdirectory(cat++)
add_subdirectory(cat)
if(NOT ${APPLE})
  add_subdirectory(cookie-break)
endif()
if(NOT ${APPLE})
  add_subdirectory(cooking)
endif()
add_subdirectory(datehack)
add_subdirectory(daytime)
if(NOT ${APPLE})
  add_subdirectory(daytimed)
endif()
if(NOT ${APPLE})
  add_subdirectory(disco)
endif()
add_subdirectory(echo)
add_subdirectory(expect)
add_subdirectory(finger)
# add_subdirectory(ftpd)
add_subdirectory(hello)
add_subdirectory(gsh)
add_subdirectory(happy)
# add_subdirectory(inetd)
add_subdirectory(locking)
add_subdirectory(ls)
add_subdirectory(mcp)
add_subdirectory(memmap)
add_subdirectory(memory)
add_subdirectory(memstress)
add_subdirectory(msh)
add_subdirectory(msh2)
if(NOT ${APPLE})
  add_subdirectory(nanomsg)
endif()
add_subdirectory(parallel)
add_subdirectory(pee)
add_subdirectory(pets)
add_subdirectory(pipe)
add_subdirectory(popen)
add_subdirectory(pthread)
add_subdirectory(race)
add_subdirectory(rad)
add_subdirectory(semaphore)
if(NOT ${APPLE})
  add_subdirectory(semutil)
endif()
add_subdirectory(sigcat)
add_subdirectory(signals)
add_subdirectory(sleep)
add_subdirectory(smokers)
add_subdirectory(snake)
add_subdirectory(sockets)
if(${LINUX})
  add_subdirectory(timeslice)
endif()
add_subdirectory(unisex)
add_subdirectory(wc)
add_subdirectory(worker)
